# mautic-pyhton

./: .gitignore  pyproject.toml
example/: __main__.py
mautic/: __init__.py
src/mautic/: client.py
src/mautic/contact/: __init__.py
